Translated: Header View, Login Page, Register Page, Home Page - Teacher, Courses Page - Teacher